--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^2.4.1",
     "redbox-react": "^1.2.8",
     "searchitunes": "^2.3.2",
+    "semantic-ui-react": "^0.62.1",
     "serve-static": "^1.11.1"
   },
   "devDependencies": {
