--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "domready": "^1.0.8",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "lodash.isequal": "^4.4.0",
     "query-string": "^4.2.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
